package ar.edu.utn.frba.dds.models.entities_establishment;

public enum EstablishmentType {
    STATION,
    SUCURSAL;
}
