package ar.edu.utn.frba.dds.models.entities_establishment.entity_type;

public enum EntityType {
    PUBLIC_TRANSPORT,
    ORGANIZATION;
}
